--- a/sales.html
+++ b/sales.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Sales Page</h1>
+    <p>Sales = $5.000</p>
     <a href="index.html">Go back to the Home Page</a>
 </body>
 </html>
